--- a/index.html
+++ b/index.html
@@ -181,29 +181,16 @@
 </template>
 
 <script>
-  var fireballSize = 22;
-
-  var getFireballSpeed = function (isMovingLeft) {
-    return isMovingLeft ? 2 : 5;
-  };
-
-  var wizardSpeed = 3;
-
-  var wizardWidth = 70;
-
-  var getWizardHeight = function () {
-    return 1.337 * wizardWidth;
-  };
-
-  var getWizardX = function (gameFieldWidth) {
-    return (gameFieldWidth - wizardWidth) / 2;
-  };
-
-  var getWizardY = function (gameFieldHeight) {
-    return gameFieldHeight / 3;
-  };
+  const fireballSize = 22;
+  const wizardSpeed = 3;
+  const wizardWidth = 70;
+  const getFireballSpeed = (isMovingLeft) => (isMovingLeft ? 2 : 5);
+  const getWizardHeight = () => (1.337 * wizardWidth);
+  const getWizardX = (gameFieldWidth) => ((gameFieldWidth - wizardWidth) / 2);
+  const getWizardY = (gameFieldHeight) => (gameFieldHeight / 3);
 </script>
 
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
