Добавляет функционал по взаимодействию пользователя с сайтом
Открытие/закрытие окна настройки персонажа
Валидация ввода имени персонажа
Изменение цвета мантии персонажа по нажатию
Изменение цвета глаз персонажа по нажатию
Изменение цвета фаерболов по нажатию
Отправка формы

--- a/index.html
+++ b/index.html
@@ -61,31 +61,31 @@
 
   <div class="demo"></div>
 
-  <div class="setup-open">
+  <div class="setup-open" tabindex="0">
     <img src="img/user-1.jpg" class="setup-open-icon">
   </div>
 </header>
 
 <div class="overlay setup hidden">
   <form class="setup-wizard-form"
-        method="post"
+        method="post"  action="https://javascript.pages.academy/code-and-magick"
         enctype="multipart/form-data"
         autocomplete="off">
 
     <div class="setup-title">
       <div class="setup-user">
         <div class="upload">
-          <img class="setup-user-pic" src="img/user-1.jpg"/>
+          <img class="setup-user-pic" src="img/user-1.jpg">
           <input type="file" name="avatar">
         </div>
         <label>
           <input type="text" name="username"
-                 maxlength="25" required
-                 class="setup-user-name" value="Синий Пендальф"/>
+                 minlength="2" maxlength="25" required
+                 class="setup-user-name" value="Синий Пендальф" size="25">
         </label>
       </div>
 
-      <span class="setup-close">&times;</span>
+      <span class="setup-close" tabindex="0">&times;</span>
     </div>
 
 
@@ -107,9 +107,9 @@
         <div class="setup-wizard-wrap">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62 86" class="setup-wizard">
             <g class="wizard">
-              <use xlink:href="#wizard-coat" class="wizard-coat" style="fill: #6589a4"></use>
+              <use xlink:href="#wizard-coat" class="wizard-coat" style="fill: #6589a4" tabindex="0"></use>
               <use xlink:href="#wizard-head" class="wizard-head"></use>
-              <use xlink:href="#wizard-eyes" class="wizard-eyes"></use>
+              <use xlink:href="#wizard-eyes" class="wizard-eyes" tabindex="0"></use>
               <use xlink:href="#wizard-hands" class="wizard-hands"></use>
             </g>
           </svg>
@@ -118,7 +118,7 @@
         <input type="hidden" name="eyes-color" value="black">
       </div>
 
-      <div class="setup-fireball-wrap">
+      <div class="setup-fireball-wrap" tabindex="0">
         <div class="setup-fireball"></div>
         <input type="hidden" name="fireball-color" value="#ee4830">
       </div>
