--- a/index.html
+++ b/index.html
@@ -190,8 +190,12 @@
   const getWizardY = (gameFieldHeight) => (gameFieldHeight / 3);
 </script>
 
-<script src="js/stat.js"></script>
+<script src="js/util.js"></script>
+<script src="js/dialog.js"></script>
 <script src="js/setup.js"></script>
+<script src="js/move.js"></script>
+<script src="js/stat.js"></script>
+<script src="js/wizard.js"></script>
 <script src="js/game.js"></script>
 
 </body>
